--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.22.2",
+    "apollo-server-lambda": "^2.22.2",
     "datasource-sql": "^1.4.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
