--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ provider:
 functions:
   graphql:
     # this is formatted as <FILENAME>.<HANDLER>
-    handler: src/graphql.graphqlHandler
+    handler: src/server.graphqlHandler
     events:
     - http:
         path: graphql
